--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -93,4 +93,9 @@
         android:key="gamespace_game_list"
         android:title="@string/game_list_title" />
 
+    <io.chaldeaprjkt.gamespace.preferences.QuickStartAppPreference
+            android:key="quick_start_apps"
+            android:title="@string/quick_start_apps_title"
+            android:summary="@string/quick_start_apps_summary" />
+
 </PreferenceScreen>
